# 4shot

./: .README.md.kate-swp  .gitignore  CMakeLists.txt  README.md  main.c
.codelite/: 4shot-someone.tags  4shot.session
.github/workflows/: cmake-single-platform.yml
